Initial commit with CloudSim improvements